/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package devtools.mobileharness.fe.v6.service.proto.host;

import "google/api/annotations.proto";
import "src/devtools/mobileharness/fe/v6/service/proto/host/host_resources.proto";

option java_package = "com.google.devtools.mobileharness.fe.v6.service.proto.host";
option java_multiple_files = true;
option java_outer_classname = "HostServiceProto";

// Service definition for host-related operations.
service HostService {
  // Retrieves the detailed overview data for a specific host by its name.
  rpc GetHostOverview(GetHostOverviewRequest) returns (HostOverview) {
    option (google.api.http) = {
      get: "/v6/hosts/{host_name}/overview"
    };
  }

  // Retrieves device summaries for a specific host.
  rpc GetHostDeviceSummaries(GetHostDeviceSummariesRequest)
      returns (GetHostDeviceSummariesResponse) {
    option (google.api.http) = {
      get: "/v6/hosts/{host_name}/device_summaries"
    };
  }

  // Updates the pass through flags for a specific host.
  rpc UpdatePassThroughFlags(UpdatePassThroughFlagsRequest)
      returns (UpdatePassThroughFlagsResponse) {
    option (google.api.http) = {
      post: "/v6/hosts/{host_name}/update_pass_through_flags"
      body: "*"
    };
  }
}

// Request message for GetHostOverview.
message GetHostOverviewRequest {
  // The unique name of the host.
  string host_name = 1;
}

// Request message for GetHostDeviceSummaries.
message GetHostDeviceSummariesRequest {
  // The unique name of the host.
  string host_name = 1;
}

// Response message for GetHostDeviceSummaries.
message GetHostDeviceSummariesResponse {
  // The list of device summaries.
  repeated DeviceSummary device_summaries = 1;
}

// Request message for UpdatePassThroughFlags.
message UpdatePassThroughFlagsRequest {
  // The unique name of the host.
  string host_name = 1;
  // The new pass through flags.
  string flags = 2;
}

// Response message for UpdatePassThroughFlags.
message UpdatePassThroughFlagsResponse {}
